fixed footer link spacing

--- a/web/src/components/layout/footer.css
+++ b/web/src/components/layout/footer.css
@@ -85,7 +85,6 @@ footer {
 
     & .logo-container {
         display: flex;
-        flex: 1;
         flex-direction: row;
         justify-content: space-between;
         margin-top: 4rem;
@@ -128,7 +127,6 @@ footer {
         box-sizing: border-box;
         display: flex;
         flex-direction: row;
-        flex: 1;
         justify-content: space-between;
 
         @media (--md-up) {
